EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/30/2011==
Caryatis: Stability fixes for Mystats window.

==01/26/2011==
Derision: Support for door opentype 57 (instant intra-zone portals which don't require the client to click, such as in the bazaar).

Note: For opentype 57, the client automatically sends the click when the player moves onto the portal.

Optional SQL, to set the bazaar portal discs to type 57 (they are type 58 in the PEQ database, but collects show they should be type 57):

update doors set opentype = 57 where zone = 'bazaar' and name = 'PORTAL_DISC';

==01/24/2011==
Trevius: Exported GetFreeSpellBookSlot(start_slot=0) and GetSpellBookSlotBySpellID(spell_id) to Perl Client.
Trevius: Fix for potential crash with EVENT_ITEM_CLICK.
Trevius: (Secrets) Identified OP_SpellEffect for Titanium.
Congdar: bad_captain: more Bot Updates / Fixes V 2.0

==01/22/2011==
Congdar: fix stack buffer overflow

==01/20/2011==
Congdar: bad_captain: Bot Updates / Fixes V 2.0

==01/18/2011==
Trevius: Changed Perl NPC AddItem(itemid, charges, slot = 0) to AddItem(itemid, charges = 0, equipitem = true) since slot was unused anyway.
Trevius: Added equipitem option to quest::addloot(item_id, charges = 0, equipitem = true).

==01/16/2011==
Caryatis: Fix for Phantom line of discs not working.
Caryatis: Fix for buffdurationformula 5(0 value results in a 3 tick spell, was set to 1 tick).
Caryatis: Fix for discs(and AAs) setting a reuse timer if used while not able to(ie stunned)
Caryatis: Implemented SE_VoiceGraft
Caryatis: Added scaling for pet focus items based on the pet power in the spell file.

==01/15/2011==
Caryatis: Fix for fear effects not fading when the buff does, also added check so that a negative recast is not set with SE_ReduceReuse

==01/14/2011==
Trevius: (l0stmancd) Fix for invalid slot move warnings on SoF+ clients.