@@ -503,3 +503,4 @@ N(OP_BuffRemoveRequest),
 N(OP_CorpseDrag),
 N(OP_CorpseDrop),
 N(OP_ChangeSize),
+N(OP_GroupMakeLeader),
