@@ -465,6 +465,7 @@ OP_GroupDisbandYou=0xc56c
 OP_GroupDisbandOther=0x162d
 OP_GroupLeaderChange=0x7545
 OP_GroupRoles=0x6b67
+OP_GroupMakeLeader=0x6087
 # LFG/LFP Opcodes
 OP_LFGCommand=0x3288				# C
 OP_LFGGetMatchesRequest=0x5613		# C
