@@ -463,6 +463,7 @@ OP_GroupDisbandYou=0x0bd0			# C
 OP_GroupDisbandOther=0x49f6			# C
 OP_GroupLeaderChange=0x0c33			# C
 OP_GroupRoles=0x116d				# C
+OP_GroupMakeLeader=0x5851
 
 # LFG/LFP Opcodes
 OP_LFGCommand=0x2c38				# C
