@@ -265,3 +265,4 @@
 	void Handle_OP_BuffRemoveRequest(const EQApplicationPacket *app);
 	void Handle_OP_CorpseDrag(const EQApplicationPacket *app);
 	void Handle_OP_CorpseDrop(const EQApplicationPacket *app);
+	void Handle_OP_GroupMakeLeader(const EQApplicationPacket *app);
